[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "flint"
version = "0.0.1"
description = "flint is a machine learning library"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Ahmed Alghali", email = "Ahmed@OffSecHQ.com"}
]

dependencies = [
    "numpy",
    "pandas",
    "scikit-learn",
    "lightgbm",
    "tqdm",
    "scipy",
    "mlflow"
]

classifiers = [
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
license = "MIT"

[project.urls]
Homepage = "https://github.com/a7med7x7/flint/"

[tool.setuptools.packages.find]
include = ["flint", "flint.*"]
exclude = ["tests", "flintvenv", "experments"]